manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do-api
  template:
    metadata:
      labels:
        app: to-do-api
    spec:
      containers:
        - image: to-do-api
          name: to-do-api
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /api/healthz/ready
              port: 8080
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 20
            httpGet:
              path: /api/healthz/alive
              port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do-web
  template:
    metadata:
      labels:
        app: to-do-web
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - image: to-do-web
          imagePullPolicy: Always
          name: to-do-web
          readinessProbe:
            initialDelaySeconds: 90
            periodSeconds: 20
            httpGet:
              path: /todo/api/healthz
              port: 8080
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 20
            httpGet:
              path: /todo/test.xhtml
              port: 8080
          resources:
            limits:
              cpu: "200m"
              memory: "300Mi"
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/local_files/images
