manifests/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: to-do-db
spec:
  serviceName: db-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres
          image: to-do-db
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
