manifests/service.yaml
---
apiVersion: v1 # Includes the Service for lazyness
kind: Service
metadata:
  name: db-svc
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: postgres-app

---
apiVersion: v1
kind: Service
metadata:
  name: to-do-api-svc
spec:
  type: NodePort
  selector:
    app: to-do-api # This is the app as declared in the deployment.
  ports: # The following will let TCP traffic from port 2345 to port 8080.
    - port: 2345
      protocol: TCP
      targetPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: to-do-web-svc
  annotations:
    cloud.google.com/backend-config: '{"ports": {"2345":"web-svc-backend-cong"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: to-do-web # This is the app as declared in the deployment.
  ports: # The following will let TCP traffic from port 2345 to port 8080.
    - port: 2345
      protocol: TCP
      targetPort: 8080
      name: http
