manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: to-do-web-ingress
spec:
  rules:
    - http:
        paths:
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: to-do-web-svc
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: to-do-api-svc
                port:
                  name: http
